lighthouse-backend/lighthouse-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lighthouse-backend-deployment
  namespace: prod
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lighthouse-backend
  template:
    metadata:
      labels:
        app: lighthouse-backend
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: lighthouse-prod-medium-node-group
      containers:
      - name: lighthouse-backend-container
        image: 050633092828.dkr.ecr.us-east-2.amazonaws.com/prod/lighthouse-backend
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "250m"
          limits:
            memory: "400Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name: "http"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20
