lighthouse-backend/lighthouse-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lighthouse-backend-service
  namespace: prod
spec:
  selector:
    app: lighthouse-backend
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
