lighthouse-backend/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: prod
spec:
  selector:
    app: redis-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
